Feat: Database initialisation

--- a/Backend/BlogApp.API/appsettings.json
+++ b/Backend/BlogApp.API/appsettings.json
@@ -5,5 +5,8 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "BlogPostAppConnectionString": "Server=FR-L4856940\\SQLEXPRESS;Database=BlogPostAppDb;TrustServerCertificate=True;Trusted_Connection=True"
+  }
 }
