Feat: Auth Db context & Auth Initial Migration

--- a/Backend/BlogApp.API/appsettings.json
+++ b/Backend/BlogApp.API/appsettings.json
@@ -8,5 +8,10 @@
   "AllowedHosts": "*",
   "ConnectionStrings": {
     "BlogPostAppConnectionString": "Server=FR-L4856940\\SQLEXPRESS;Database=BlogPostAppDb;TrustServerCertificate=True;Trusted_Connection=True"
+  },
+  "Jwt": {
+    "Key": "fdzph5kscoie867OLJD874564zdfazZFAQ87",
+    "Issuer": "https://localhost:7174",
+    "Audience": "http://localhost:4200"
   }
 }
