--- a/Frontend/blogApp/package.json
+++ b/Frontend/blogApp/package.json
@@ -19,6 +19,7 @@
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
     "bootstrap": "^5.3.2",
+    "jwt-decode": "^4.0.0",
     "ngx-cookie-service": "^16.1.0",
     "ngx-markdown": "^16.0.0",
     "rxjs": "~7.8.0",
